--- a/。开源代码库/工作流程/FastbootTool.yml
+++ b/。开源代码库/工作流程/FastbootTool.yml
@@ -5,7 +5,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://hugeota.d.miui.com/21.4.15/miui_ALIOTH_21.4.15_8f3a6c70dc_11.0.zip
+  ROM_URL: https://bigota.d.miui.com/V13.0.10.0.SLCCNXM/miui_CUPID_V13.0.10.0.SLCCNXM_e5b34408f8_12.0.zip
   ROM_Version: miui21.4.15
   TZ: Asia/Shanghai
 
